cmake_minimum_required(VERSION 3.13.0)

add_executable(sieve_of_eratosthenes sieve_of_eratosthenes.cpp)
set_warning_levels(sieve_of_eratosthenes)

add_executable(reverse_polish_notation reverse_polish_notation.cpp)
target_compile_features(reverse_polish_notation PRIVATE cxx_std_17)
set_warning_levels(reverse_polish_notation)